<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_profile"
    tools:context=".LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <EditText
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:inputType="text"
            android:id="@+id/username"
            style="@style/Base.Widget.AppCompat.EditText."
            android:backgroundTint="@color/underbar"
            android:hint="@string/username"/>

        <EditText
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/password"
            android:backgroundTint="@color/underbar"
            style="@style/Base.Widget.AppCompat.EditText."
            android:hint="@string/password"/>

        <Button
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/sign_in_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/sign_in_btn_bg"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>


</LinearLayout>